fixed positioning, changed colors. Not fully responsive on mobile screen, but tolarable.

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -13,7 +13,7 @@ body {
     bottom: 20px;
     right: 30px;
     z-index: 99;
-    font-size: 18px;
+    font-size: 12px;
     border: none;
     outline: none;
     background-color: rgb(255, 255, 255);
@@ -36,12 +36,13 @@ body {
 
 .navbar {
     padding: 0 !important;
-    background: rgb(255, 255, 255);
+    background: rgb(39, 39, 39);
     min-height: 60px;
 }
 
 .navbar-brand {
     padding-left: 20px;
+    color:rgb(255, 255, 255)
 }
 
 .navbar-nav li {
@@ -49,14 +50,14 @@ body {
 }
 
 .navbar-nav li a {
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     font-weight: 450;
     float: right;
     text-align: left;
 }
 
 .fa-bars {
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     font-size: 30px !important;
 }
 
@@ -73,7 +74,7 @@ body {
 .top-title {
     font-size: 60px;
     font-weight: 500;
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     padding-top: 10%;
     padding-left: 2%;
 }
@@ -81,7 +82,7 @@ body {
 .running-text {
     font-size: 30px;
     font-weight: 300;
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
 }
 
 #introCarousel {
@@ -113,83 +114,76 @@ body {
     padding-top: 2%;
     padding-bottom: 5%;
     min-height: 1900px;
-    background-color:rgb(231, 219, 148);
+    background-color:rgb(39, 39, 39);
 }
 
-#member-top {
-    padding-top: 20px;
-    align-items: center;
-    padding-left: 70px;
-}
-
-#member-top-title {
-    font-size: 30px;
-    color: rgb(0, 0, 0);
-}
-
-.member-row {
+#member-row {
     min-height: 600px;
 }
 
 .member-title {
-    font-size: 20px;
+    font-size: 30px;
     padding-top: 60px;
-    margin-left: 10px;
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
 }
 
 .member-text {
     font-size: 17px;
     margin-top: 30px;
+    margin-right: 70px;
+    color: rgb(255, 255, 255);
 }
 
-#img-fluid {
-    height: 350px;
+.member-image {
+    margin-left: 25%;
+}
+
+.img-fluid {
+    max-height: 350px;
     border-radius: 10px;
-    margin-left: 100px;
-    margin-top: 40px;
+    margin-top: 70px;
+    margin-left: 40px;
 }
 
 .linkedin {
-    color:black;
+    color:rgb(255, 255, 255);
 }
 
 #mål {
-    padding: 40px 0;
     min-height: 500px;
+    background-color: rgb(71, 71, 71);
 }
 
 #mål-title {
     font-size: 30px;
-    padding-top: 20px;
-    margin-left: 10px;
-    margin-right: 10px;
-    color: rgb(0, 0, 0);
+    padding-top: 40px;
+    color: rgb(255, 255, 255);
+    padding-left: 70px;
 }
 
 #mål-text {
     font-size: 20px;
     padding-top: 50px;
-    margin-left: 10px;
-    margin-right: 10px;
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
+    padding-left: 70px;
 }
 
 #kontakt {
     padding: 5px 0;
     background-color: rgb(0, 0, 0);
-    height: 100px;
-    align-content: center;
+    height: 140px;
 }
 
 #footer-title {
     color: white;
     font-size: 30px;
     padding-top: 23px;
+    padding-left: 70px;
 }
 
 #footer-text {
     color: white;
-    font-size: 20px;
-    padding-top: 31px;
+    font-size: 17px;
+    padding-top: 10px;
+    padding-left: 70px;
 }
